Add manifest and app icons

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="azure">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon192.png">
+    <link rel="manifest" href="/manifest.json">
     <title>Jack Reid</title>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
   </head>
