--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon192.png">
     <link rel="manifest" href="/manifest.json">
     <title>Jack Reid</title>
+    <link href="%PUBLIC_URL%/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
   </head>
   <body>
