--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,2 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="azure">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon192.png">
-    <link rel="manifest" href="/manifest.json">
-    <title>Jack Reid</title>
-    <link href="%PUBLIC_URL%/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root" />
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-53536747-2', 'auto');
-      ga('send', 'pageview');
-    </script>
-  </body>
-</html>
+<!DOCTYPE html>
+<html><head><meta charset="utf-8"/><meta http-equiv="x-ua-compatible" content="ie=edge"/><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/><title data-react-helmet="true"></title><script src="/socket.io/socket.io.js"></script></head><body><div id="___gatsby"></div><script src="/commons.js"></script></body></html>
