--- a/index.html
+++ b/index.html
@@ -5,22 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="static/favicon.ico">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata|VT323" rel="stylesheet">
   </head>
   <body>
-    <div class="content-column">
-      <h1>Jack Reid</h1> 
-      <p>I make stuff on the internet. I read books. I take photos. I write things. The things I write aren’t very good, but I did English at uni so I have to do it anyway.</p>
-      <nav class="index-filter">
-        <button>Writing</button>
-        <button>Photos</button>
-        <button>Found Objects</button>
-      </nav>
-      <article class="index-article">
-        <small>#writing</small>
-        <h1><a href="/article/its-just-me-and-you">It's Just Me And You</a></h1>
-        <time>7th September 2018</time>
-        <p>A short story told by a flight data recorder</p>
-      </article>
-    </div>
+    <header>
+      <h1>
+        <a class="pink-link" href="https://jackreid.xyz">Jack Reid</a>
+      </h1>
+      <p>In London, at BuzzFeed.</p>
+    </header>
+
+    <ul>
+      <li><a class="pink-link" href="https://instagram.com/jackwreid">Instagram</a></li>
+      <li><a class="pink-link" href="https://twitter.com/jackreid">Twitter</a></li>
+    </ul>
   </body>
 </html>
